--- a/index.html
+++ b/index.html
@@ -14,4 +14,7 @@
     <input id="number" class="form-control" type="text">
     <button type="submit" class="btn">robo button!</button>
   </form>
+  <div id="output">
+    
+  </div>
 </div>
