get README to push to github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
 </head>
+<body>
 <div class="container">
   <h1>talk to the robo MR.rodgers!</h1>
   <form id="talk">
@@ -15,6 +16,7 @@
     <button type="submit" class="btn">robo button!</button>
   </form>
   <div id="output">
-    
+
   </div>
+</body>
 </div>
